# salary-viewer-service

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
config/: const.py  database.py  logger.py  settings.py  utils.py
migration/: env.py
src/: main.py
src/api/: routers.py
src/api/auth/: manager.py  services.py  settings.py  views.py
src/api/employee/: views.py
src/api/employee_info/: views.py
src/api/position/: views.py
src/core/: exceptions.py
src/migrations/: env.py
src/migrations/versions/: 2023_06_25_2158-d4d65f6c2259_initial.py  2023_06_26_1229-8d0d6e55801d_initial.py  2023_06_27_0835-b2bec1bf4157_initial.py
src/models/: base.py  employee.py
src/repositories/: base.py  employee.py  employee_info.py  position.py
src/schemas/: auth.py  employee.py  employee_info.py  position.py
tests/: conftest.py  test_auth.py  test_employee.py
